--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "camelcase": "off",
     "no-console": "off",
     "prettier/prettier": "error",
+    "@typescript-eslint/no-namespace": "off",
     "import-helpers/order-imports": [
       "warn",
       {
