--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,6 @@
 {
   "*.ts": [
     "yarn eslint --fix",
-    "cross-env CI=true yarn test --bail --findRelatedTests",
-    "git add"
+    "cross-env CI=true yarn test --bail --findRelatedTests --passWithNoTests"
   ]
 }
