--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,22 @@
   "rules": {
     "camelcase": "off",
     "no-console": "off",
+    "no-new": "off",
+    "no-useless-constructor": "off",
+    "max-classes-per-file": "off",
     "prettier/prettier": "error",
+    "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-empty-interface": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never"
+      }
+    ],
+    "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
     "import-helpers/order-imports": [
       "warn",
       {
@@ -46,5 +60,18 @@
         }
       }
     ]
+  },
+  "settings": {
+    "import/extensions": [
+      ".ts"
+    ],
+    "import/parsers": {
+      "@typescript-eslint/parser": [
+        ".ts"
+      ]
+    },
+    "import/resolver": {
+      "typescript": {}
+    }
   }
 }
