--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
   ],
   "rules": {
     "camelcase": "off",
+    "class-methods-use-this": "off",
     "no-console": "off",
     "no-new": "off",
     "no-useless-constructor": "off",
@@ -39,6 +40,7 @@
         "ts": "never"
       }
     ],
+    "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
     "import-helpers/order-imports": [
