--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.16",
@@ -40,5 +41,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3"
   }
 }
