--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
   }
 }
