--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "faker": "^5.1.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
+    "jest-environment-node": "^26.6.2",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
