--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "lint-staged": "^10.5.3",
+    "nanoid": "^3.1.20",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
