--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.16",
+    "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "commitizen": "^4.2.2",
@@ -52,6 +53,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "uuidv4": "^6.2.6"
   }
 }
