--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@prisma/cli": "^2.14.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.9",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.0",
