--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nanoid": "^3.1.20",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
