--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.1.3"
   },
   "dependencies": {
