--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.16",
+    "@types/supertest": "^2.0.10",
     "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
@@ -40,6 +41,7 @@
     "lint-staged": "^10.5.3",
     "nanoid": "^3.1.20",
     "prettier": "^2.2.1",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
     "tscpaths": "^0.0.9",
